# qr_detector

./: README.md  pyproject.toml
src/qr_detector/: __init__.py  qr_detector.py
