[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "qr-detector-th"
version = "1.1"
description = "โมดูลตรวจจับ QR Code ด้วย OpenCV"
requires-python = ">=3.8"
dependencies = [
    "opencv-python-headless",
    "numpy"
]

[tool.hatch.build.targets.wheel]
packages = ["src/qr_detector"]